--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p id="demo"></p>
 		
 		<script>
-			var x = document.getElementById("demo");
+			const x = document.getElementById("demo");
 			
 			function getLocation() {
 				if (navigator.geolocation) {
