new text on button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<p>Premi il bottone per ricevere le tue coordinate GPS</p>
-		<button onclick="getLocation()">Coordinate</button>
+		<button onclick="getLocation()">Coordinate GPS</button>
 		<p id="demo"></p>
 		
 		<script>
