--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<p>Premi il bottone per ricevere le tue coordinate GPS</p>
 		<button onclick="getLocation()">Coordinate GPS</button>
 		<p id="demo"></p>
-		
+
+<!--	
 		<script>
 			const x = document.getElementById("demo");
 			
@@ -25,6 +26,7 @@
 			}
 			
 		</script>
-		
+-->
+		<script src="script.js"></script>
 	</body>
 </html>
