--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Navigator test</title>
 	</head>
 	<body>
-		<p>Premi il bottone per ricevere le tue coordinate GPS</p>
+		<p>Premi il bottone per ricevere le tue coordinate GPS.</p>
 		<button onclick="getLocation()">Coordinate GPS</button>
 		<p id="demo"></p>
 
