--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Navigator test</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Test AR georeferenziata</title>
+		<script src="https://aframe.io/releases/0.9.2/aframe.min.js" charset="utf-8"></script>
+		<script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js" charset="utf-8"></script>
+		<script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js" charset="utf-8"></script>
+		<script>
+			THREEx.ArToolkitContext.baseURL = "https://raw.githack.com/jeromeetienne/ar.js/master/three.js"
+		</script>
 	</head>
-	<body>
+	<body style='margin: 0; overflow: hidden;'>
+	
+		<a-scene
+			vr-mode-ui="enabled: false"
+				embedded
+			arjs="sourceType: webcam;  sourceWidth: 1280; sourceHeight: 960; displayWidth: 1280; displayHeight:9 60; debugUIEnabled: false;">
+			<a-camera gps-camera rotation-reader></a-camera>
+			<a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 11.2494; latitude: 43.7785;" animation-mixer/>
+		</a-scene>
 		<p>Premi il bottone per ricevere le tue coordinate GPS.</p>
 		<button onclick="getLocation()">Coordinate GPS</button>
 		<p id="demo"></p>
