coordinates from ipad

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<p>Premi il bottone per ricevere le tue coordinate GPS.</p>
 		<button onclick="getLocation()">Coordinate GPS</button>
 		<p id="demo"></p>
-
+<!-- Lat. 42.95717529180326 Long: 12.706427-->
 
 		<script src="script.js"></script>
 	</body>
