--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 				embedded
 			arjs="sourceType: webcam;  sourceWidth: 1280; sourceHeight: 960; displayWidth: 1280; displayHeight:9 60; debugUIEnabled: false;">
 			<a-camera gps-camera rotation-reader></a-camera>
-			<a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 11.2494; latitude: 43.7785;" animation-mixer/>
+			<a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 12.706427258469164; latitude: 42.95717529180326;" animation-mixer/>
 		</a-scene>
 		<p>Premi il bottone per ricevere le tue coordinate GPS.</p>
 		<button onclick="getLocation()">Coordinate GPS</button>
 		<p id="demo"></p>
-<!-- Lat. 42.95717529180326 Long: 12.706427-->
+<!-- Lat. 42.95717529180326 Long: 12.706427258469164-->
+<!-- longitude: 11.2494; latitude: 43.7785;-->
 
 		<script src="script.js"></script>
 	</body>
