--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Test AR georeferenziata</title>
+		<title>Test ARGEO 01</title>
 		<script src="https://aframe.io/releases/0.9.2/aframe.min.js" charset="utf-8"></script>
 		<script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js" charset="utf-8"></script>
 		<script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js" charset="utf-8"></script>
